--- a/src/views/management/index.scss
+++ b/src/views/management/index.scss
@@ -1,7 +1,7 @@
-.book-search-wrapper {
+.sub-search-wrapper {
 	margin-bottom: 20px;
 }
-.book-menu-wrapper {
+.sub-menu-wrapper {
 	height: 100%;
 	min-height: 400px;
 	padding-right: 10px;
@@ -11,7 +11,7 @@
 	}
 	.el-menu-item.is-active {
 		color: #000000 !important;
-		background-color: #b7d8f48a !important;
+		background-color: #e3e7eb86 !important;
 	}
 }
 .search-wrapper {
